[project]
name = "rag-tg-bot"
version = "0.1.0"
description = "RAG Telegram bot"
authors = [
    {name = "ludaskov",email = "143870225+Lskovo@users.noreply.github.com"}
]
license = {text = "MIT"}
package-mode = false
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-telegram-bot[ext] (>=22.1,<23.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langchain-together (>=0.3.0,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "huggingface-hub (>=0.33.0,<0.34.0)",
    "torch (>=2.7.1,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentence-transformers>=2.2.2,<3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
tiktoken = {allow-prereleases = true}
